Game function basics
Startet to update game functions in order to be able to change questions.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <button id="option3">Option 3</button>
         <button id="option4">Option 4</button>
         <p id="answer"></p>
+        <button class='nextButton hidden2'>Next qustion</button>
 
     </div>
 </div>
