Som minor css uodates + code cleaning

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,900&display=swap" rel="stylesheet">
 <link href="style.css" rel="stylesheet">
 </head>
 <body>
@@ -18,10 +19,10 @@
         
     </div>
     <div  id="option-buttons">
-        <button id="option1">Option 1</button>
-        <button id="option2">Option 2</button>
-        <button id="option3">Option 3</button>
-        <button id="option4">Option 4</button>
+        <button id="option">Option 1</button>
+        <button id="option">Option 2</button>
+        <button id="option">Option 3</button>
+        <button id="option">Option 4</button>
         
 
     </div>
