Working for next question set function
Working for next question set function
Some css updates

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <h3>Your score: <span id="score">0</span></h3>
     </div>
     <button id="gameStarter">Start game</button>
+    <button id="gameStarter1">Next level</button>
     <div class="hidden" id="optionSection">
     <div class="word-image">
         <h3 class="image-descriptin">Choose the right word in Latvian</h3>
@@ -26,7 +27,7 @@
         
 
     </div>
-    <div id="correct"></div>
+    <div class="message" id="correct"></div>
     <button class='nextButton'>Next qustion</button>
 </div>
 </div>
