Next level function update
Next level function update
css update
word database update

Smoother next level function update in progress.

--- a/nextlvl.html
+++ b/nextlvl.html
@@ -7,12 +7,12 @@
 <body>
 <div class="gameBody">
     <div class="introduction">
-        <h1>Lets learn some Latvian</h1>
+        <h1>Lets learn some Latvian. This is the next level</h1>
         <h5>Choose the right option which decribes object you can see in picture down below:</h5>
         <h3>Your score: <span id="score">0</span></h3>
     </div>
-    <button class="game-btn" id="gameStarter">Start game level 1</button>
-    <a id="level2" href="/nextlvl.html">Start game level 2</a>
+    <button id="gameStarter">Start game</button>
+    
     <div class="hidden" id="optionSection">
     <div class="word-image">
         <h3 class="image-descriptin">Choose the right word in Latvian</h3>
@@ -37,7 +37,7 @@
 
 
     
-    <script src='index.js'></script>
+    <script src='nextlvl.js'></script>
 </body>
 
 
