CSS and level update

--- a/levels/2level/nextlvl.html
+++ b/levels/2level/nextlvl.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,900&display=swap" rel="stylesheet">
-<link href="style.css" rel="stylesheet">
+<link href="/style.css" rel="stylesheet">
 </head>
 <body>
 <div class="gameBody">
@@ -11,7 +11,7 @@
         <h5>Choose the right option which decribes object you can see in picture down below:</h5>
         <h3>Your score: <span id="score">0</span></h3>
     </div>
-    <button id="gameStarter">Start game</button>
+    <button id="gameStarter">Learn about humans</button>
     
     <div class="hidden" id="optionSection">
     <div class="word-image">
@@ -37,7 +37,7 @@
 
 
     
-    <script src='nextlvl.js'></script>
+    <script src='/levels/2level/nextlvl.js'></script>
 </body>
 
 
