--- a/levels/3level/thirdLvl.html
+++ b/levels/3level/thirdLvl.html
@@ -2,18 +2,17 @@
 <html>
 <head>
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,900&display=swap" rel="stylesheet">
-<link href="style.css" rel="stylesheet">
+<link href="/style.css" rel="stylesheet">
 </head>
 <body>
 <div class="gameBody">
     <div class="introduction">
-        <h1>Lets learn some Latvian</h1>
+        <h1>Lets learn some Latvian. This is the next level</h1>
         <h5>Choose the right option which decribes object you can see in picture down below:</h5>
         <h3>Your score: <span id="score">0</span></h3>
     </div>
-    <button class="game-btn" id="gameStarter">Start game level 1</button>
-    <a class="level2" href="/levels/2level/nextlvl.html">Start game level 2</a>
-    <a class="level3" href="/levels/3level/thirdLvl.html">Start game level 3</a>
+    <button id="gameStarter">Learn some actions</button>
+    
     <div class="hidden" id="optionSection">
     <div class="word-image">
         <h3 class="image-descriptin">Choose the right word in Latvian</h3>
@@ -38,7 +37,7 @@
 
 
     
-    <script src='index.js'></script>
+    <script src='/levels/3level/thirdLvl.js'></script>
 </body>
 
 
